--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <canvas id="game" width=800 height=600 style="border: 1px solid black;"></canvas>
         <p>Flappy Bird!</p>
         <script src="https://unpkg.com/kontra/kontra.min.js"></script>
-        <script src="Compiled/main.js"></script>
+        <script src="dist/main.js"></script>
     </body>
 </html>
         
